k8s-configuration/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard

spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
